--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ time = 2020-01-01T07:32:00+00:00 #random time
 
 [database]
 
-us .	er = "root"#comment to delete
+us .	er = 'root'#comment to delete
 pass = "secret"
 int = -214748364
 port = 2147483649 #comment
